Update libraries, hide some errors, and clean up some code
Signed-off-by: GoldenStack <goldenfire64yt@gmail.com>